...
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/green"
        app:contentPadding="8dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/test_results"
        android:textColor="@color/red"
        android:layout_margin="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
...
