<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_test_recycler_view" android:title="RecyclerView"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_test_bg" android:title="@string/background"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_test_time" android:title="Time"
        android:orderInCategory="100" app:showAsAction="never" />


</menu>
